# grcov

./: .dockerignore  .markdownlint.yaml  .pre-commit-config.yaml  .travis.yml  CODE_OF_CONDUCT.md  Cargo.toml  README.md  appveyor.yml  build.rs  clippy.toml  install.sh
.github/: dependabot.yml
.github/workflows/: CICD.yml  ci.yml  release.yml
benches/: filter.rs  lib.rs  llvm_tools.rs  output.rs  parser.rs  reader.rs
resources/: grcov.css
src/: .main.rs.swp  cli.yml  cobertura.rs  covdir.rs  defs.rs  file_filter.rs  file_walker.rs  filter.rs  fuzzmanager.rs  gcov.rs  html.rs  lib.rs  llvm_tools.rs  main.rs  output.rs  parser.rs  path_rewriting.rs  producer.rs  reader.rs  summary.rs  symlink.rs
src/c/: GCOV.cpp  GCOV.h  GCOVOutput.hxx  llvmgcov.cpp
src/templates/: base.html  file.html  index.html  macros.html
test/: .gitattributes  1494603973-2977-7.info  64bit_count.gcda  64bit_count.gcno  64bit_count.gcov  Platform_another.gcno  RootAccessibleWrap.gcda  RootAccessibleWrap.gcda.gcov  Unified_cpp_netwerk_base0.gcda  Unified_cpp_netwerk_base0.gcno  basic-jacoco.xml  default.profraw  duplicate_fn_fnda.info  empty_line.info  intermediate_with_branches.gcov  invalid_DA_record.info  linked-files-map.json  mozillavpn_serverconnection.gcda  mozillavpn_serverconnection.gcno  negative_counts.gcda  negative_counts.gcno  negative_counts.gcov  non-utf-8.gcov  not_info_file.info  nsGnomeModule.gcda  nsGnomeModule.gcno  nsMaiInterfaceDocument.gcno  nsMaiInterfaceValue.gcda  nsMaiInterfaceValue.gcno  old_branches.gcov  prova.gcov  prova.info  prova_fn_with_commas.info  reader_clang-22.gcda  reader_clang-22.gcno  reader_clang-22.gcno.1.dump  reader_gcc-10.gcda  reader_gcc-10.gcno  reader_gcc-6.gcda  reader_gcc-6.gcno  (+12 more)
test/go/: go.out
test/jacoco/: basic-report.xml  inner-classes.xml  kotlin-jacoco-report.xml  multiple-top-level-classes.xml  not_jacoco_file.xml
test/java/: skip.java  skip.json
test/llvm/: file.gcda  file.gcno  file_branch.c  file_branch.gcda  file_branch.gcno  reader.c  reader.c.0.gcov  reader.c.1.gcov  reader.c.2.gcov  reader.gcda  reader.gcno  reader.gcno.0.dump  reader.gcno.1.dump  reader.gcno.2.dump  reader.gcno.gcda.json  reader.gcno.json
test/no_gcda/: main.gcno
test/only_one_gcda/: main.gcda
test/pycov/: report.xml
test/relative_path/: relative_path.info
test/rust/: generics_with_two_parameters.gcda  generics_with_two_parameters.gcno  generics_with_two_parameters_intermediate.gcov  generics_with_two_parameters_old.gcov
test/sub/: prova2.gcda  prova2.gcno
test/sub2/: RootAccessibleWrap.gcno
test/zip_dir/: Platform.gcda  nsMaiInterfaceDocument.gcda
tests/: .gitignore  Dockerfile  guess_single_file.json  test.rs
tests/basic/: Makefile  expected.txt  expected_gcc.ade  expected_gcc.coveralls  expected_llvm.ade  expected_llvm.coveralls  expected_llvm_7.covdir  expected_llvm_8.ade  expected_llvm_8.coveralls  expected_no_gcda_llvm.ade
tests/basic_zip/: expected_two_gcda_gcc.coveralls  expected_two_gcda_llvm.coveralls
tests/basic_zip_dir/: expected_gcc.coveralls  expected_gcc.fuzzmanager  expected_llvm.ade  expected_llvm_mac.coveralls  main.c
tests/basic_zip_zip/: expected_gcc.ade  expected_llvm.covdir  expected_llvm.coveralls  expected_llvm_7.coveralls  expected_llvm_mac.ade  expected_no_gcda_gcc.covdir  expected_no_gcda_gcc.coveralls  expected_no_gcda_llvm.coveralls  expected_no_gcda_llvm_7.fuzzmanager  expected_no_gcda_llvm_8.fuzzmanager  expected_no_gcda_llvm_mac.coveralls  expected_two_gcda_gcc.coveralls  expected_two_gcda_gcc.fuzzmanager  expected_two_gcda_llvm.covdir  expected_two_gcda_llvm.coveralls  expected_two_gcda_llvm_7.covdir  expected_two_gcda_llvm_7.coveralls  expected_two_gcda_llvm_8.coveralls  expected_two_gcda_llvm_mac.coveralls
tests/class/: expected.txt  expected_gcc.ade  expected_gcc.covdir  expected_gcc.coveralls  expected_gcc.txt  expected_gcc_10.ade  expected_gcc_10.covdir  expected_gcc_10.coveralls  expected_gcc_11.ade  expected_gcc_11.covdir  expected_gcc_11.coveralls  expected_gcc_7.coveralls  expected_llvm.ade  expected_llvm.coveralls  expected_llvm.fuzzmanager  expected_llvm.txt  expected_llvm_12.ade  expected_llvm_12.coveralls  expected_llvm_6.coveralls  expected_llvm_7.coveralls  expected_llvm_7_linux.ade  expected_llvm_7_linux.covdir  expected_llvm_7_linux.coveralls  expected_llvm_8.coveralls  expected_llvm_mac.ade  expected_llvm_mac.coveralls  expected_llvm_mac.fuzzmanager  expected_no_gcda_llvm.ade  expected_two_gcda_llvm.ade  main.cpp
tests/include/: Makefile  expected.txt  expected_gcc.ade  expected_gcc.covdir  expected_gcc.coveralls  expected_gcc_10.ade  expected_gcc_10.covdir  expected_gcc_10.coveralls  expected_gcc_11.ade  expected_gcc_11.covdir  expected_gcc_11.coveralls  expected_llvm.ade  expected_llvm.coveralls  expected_llvm.fuzzmanager  expected_llvm.txt  expected_llvm_12.ade  expected_llvm_12.covdir  expected_llvm_12.coveralls  expected_llvm_6.coveralls  expected_llvm_7_linux.ade  expected_llvm_7_linux.covdir  expected_llvm_7_linux.coveralls  expected_llvm_8.ade  expected_llvm_8.coveralls  expected_llvm_mac.ade  expected_llvm_mac.coveralls  expected_llvm_mac.fuzzmanager  expected_no_gcda_llvm.ade  expected_two_gcda_llvm.ade  include.h  main.cpp
tests/include2/: Makefile  expected.txt  expected_gcc.ade  expected_gcc.covdir  expected_gcc.coveralls  expected_gcc_10.ade  expected_gcc_10.covdir  expected_gcc_10.coveralls  expected_gcc_11.ade  expected_gcc_11.covdir  expected_gcc_11.coveralls  expected_gcc_7.coveralls  expected_llvm.ade  expected_llvm.coveralls  expected_llvm.fuzzmanager  expected_llvm.txt  expected_llvm_12.ade  expected_llvm_13.covdir  expected_llvm_13.coveralls  expected_llvm_6.coveralls  expected_llvm_7.ade  expected_llvm_7_linux.ade  expected_llvm_7_linux.covdir  expected_llvm_7_linux.coveralls  expected_llvm_8.coveralls  expected_llvm_mac.ade  expected_llvm_mac.covdir  expected_llvm_mac.coveralls  expected_no_gcda_llvm.ade  expected_two_gcda_llvm.ade  file.cpp  main.cpp
tests/rust/: Cargo.toml
tests/switch/: expected_gcc.ade  expected_gcc.covdir  expected_gcc_7.ade  (+17 more)
(+36 files in other folders)
