[package]
name = "grcov"
version = "0.8.19"
authors = ["Marco Castelluccio <mcastelluccio@mozilla.com>"]
description = "Rust tool to collect and aggregate code coverage data for multiple source files"
license = "MPL-2.0"
documentation = "https://github.com/mozilla/grcov"
homepage = "https://github.com/mozilla/grcov"
repository = "https://github.com/mozilla/grcov"
readme = "README.md"
keywords = ["coverage"]
categories = ["command-line-utilities", "development-tools", "development-tools::testing"]
exclude = [
    "test/*",
    "tests/*",
    "benches/*",
    ".github/*",
    ".gitignore",
    ".dockerignore",
    ".pre-commit-config.yaml",
    "CODE_OF_CONDUCT.md",
    ".markdownlint.yaml"
]
edition = "2018"

[features]
default = ["deflate-zlib", "demangle-no-swift"]
tc = ["tcmalloc"]
deflate = ["zip/deflate"]
deflate-miniz = ["zip/deflate-miniz"]
deflate-zlib = ["zip/deflate-zlib"]
demangle-no-swift = ["symbolic-demangle/cpp", "symbolic-demangle/msvc", "symbolic-demangle/rust"]
demangle-with-swift = [
    "symbolic-demangle/cpp",
    "symbolic-demangle/msvc",
    "symbolic-demangle/rust",
    "symbolic-demangle/swift",
]

[dependencies]
cargo-binutils = "0.3"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.4", features = ["cargo", "derive", "deprecated", "wrap_help"] }
crossbeam-channel = "0.5"
flate2 = "1.0"
globset = "0.4"
infer = "0.15.0"
lazy_static = "1.4"
log = "0.4"
md-5 = "0.10"
num_cpus = "1.15"
once_cell = "1.17"
quick-xml = "0.31"
rayon = "1.10"
regex = "1.10"
rustc-hash = "1.1"
semver = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
simplelog = "0.12"
smallvec = "1.11"
symbolic-common = "12.1"
symbolic-demangle = { version = "12.5", default-features = false }
tabled = "0.14"
tempfile = "3.8"
tera = "1.19"
uuid = { version = "1.5", features = ["v4"] }
walkdir = "2.4"
zip = { version = "0.6", default-features = false }

[dev-dependencies]
pretty_assertions = "1.2"
rustc_version = "0.4.0"

[profile.release]
lto = "thin"

[target.'cfg(unix)'.dependencies]
#tcmalloc = { version = "0.3", features = ["bundled"] }
tcmalloc = { version = "0.3", optional = true }
