[package]
name = "grcov"
version = "0.8.20"
authors = ["Marco Castelluccio <mcastelluccio@mozilla.com>"]
description = "Rust tool to collect and aggregate code coverage data for multiple source files"
license = "MPL-2.0"
documentation = "https://github.com/mozilla/grcov"
homepage = "https://github.com/mozilla/grcov"
repository = "https://github.com/mozilla/grcov"
readme = "README.md"
keywords = ["coverage"]
categories = ["command-line-utilities", "development-tools", "development-tools::testing"]
exclude = [
    "test/*",
    "tests/*",
    "benches/*",
    ".github/*",
    ".gitignore",
    ".dockerignore",
    ".pre-commit-config.yaml",
    "CODE_OF_CONDUCT.md",
    ".markdownlint.yaml"
]
edition = "2018"

[features]
default = ["deflate-zlib", "demangle-no-swift"]
tc = ["tcmalloc"]
deflate = ["zip/deflate"]
deflate-miniz = ["zip/deflate-miniz"]
deflate-zlib = ["zip/deflate-zlib"]
demangle-no-swift = ["symbolic-demangle/cpp", "symbolic-demangle/msvc", "symbolic-demangle/rust"]
demangle-with-swift = [
    "symbolic-demangle/cpp",
    "symbolic-demangle/msvc",
    "symbolic-demangle/rust",
    "symbolic-demangle/swift",
]

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["cargo", "derive", "deprecated", "wrap_help"] }
crossbeam-channel = "0.5"
flate2 = "1.0"
globset = "0.4"
infer = "0.16.0"
lazy_static = "1.5"
log = "0.4"
md-5 = "0.10"
num_cpus = "1.15"
once_cell = "1.20"
quick-xml = "0.36"
rayon = "1.10"
regex = "1.11"
rustc-hash = "2.0"
rustc_version = "0.4"
semver = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
simplelog = "0.12"
smallvec = "1.13"
symbolic-common = "12.12"
symbolic-demangle = { version = "12.12", default-features = false }
tabled = "0.16"
tempfile = "3.13"
tera = "1.20"
uuid = { version = "1.11", features = ["v4"] }
walkdir = "2.5"
zip = { version = "2.2", default-features = false }

[dev-dependencies]
pretty_assertions = "1.4"
rustc_version = "0.4.1"

[profile.release]
lto = "thin"

[target.'cfg(unix)'.dependencies]
#tcmalloc = { version = "0.3", features = ["bundled"] }
tcmalloc = { version = "0.3", optional = true }
